--- a/index.html
+++ b/index.html
@@ -141,8 +141,8 @@ vegaEmbed('#bar_chart', spec2).then(function(result) {
       <p align = "center">
         
         <p3>Melbourne</p3> is known for having some of the most temperature weather in the world. 
-        While being in <p2>Australia</p2>, means that <p3>Melbourne</p3> experiences the heat in the summer, being a coastal city means there is also a lot of wind. 
-        <p3>Melbourne</p3> is known for experiencing 4 seasons in a day which is often seen in the height of Spring, with the day starting with sun and ending with rain! </p>
+        From being in <p2>Australia</p2>, this means that <p3>Melbourne</p3> experiences the high temperatures in the summer. While being a coastal city means there is also a lot of wind. 
+        <p3>Melbourne</p3> is known for experiencing 4 seasons in a day which is often seen in the height of Spring, with the days starting with sun and ending with rain! </p>
 
     <p align = "center"> 
         The below graphs are specific to <p3>Melbourne</p3>. The first graph shows how the temperature changes over <p3>Melbourne</p3> over the course of a year (2014). 
